--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widget Grist Configurable</title>
+    <title>Widget Grist Professionnel</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
         * {
@@ -14,157 +14,294 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background: #f5f5f5;
-            padding: 1rem;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            padding: 2rem;
+            min-height: 100vh;
         }
 
         #container {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
         }
 
-        /* Barre de recherche */
+        /* Barre de recherche moderne */
         .search-bar {
             background: white;
-            padding: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 1.5rem;
+            padding: 1.5rem;
+            border-radius: 16px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.15);
+            margin-bottom: 2rem;
+            backdrop-filter: blur(10px);
         }
 
         .search-input {
             width: 100%;
-            padding: 0.75rem 1rem;
-            font-size: 1rem;
+            padding: 1rem 1.5rem;
+            font-size: 1.1rem;
             border: 2px solid #e0e0e0;
-            border-radius: 6px;
-            transition: border-color 0.2s;
+            border-radius: 12px;
+            transition: all 0.3s ease;
+            background: #f8f9fa;
         }
 
         .search-input:focus {
             outline: none;
-            border-color: #2196F3;
+            border-color: #667eea;
+            background: white;
+            box-shadow: 0 0 0 4px rgba(102, 126, 234, 0.1);
         }
 
         .search-stats {
-            margin-top: 0.5rem;
-            color: #666;
-            font-size: 0.9rem;
+            margin-top: 0.75rem;
+            color: #6c757d;
+            font-size: 0.95rem;
+            font-weight: 500;
         }
 
         .config-message {
             text-align: center;
-            padding: 3rem 1rem;
+            padding: 4rem 2rem;
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            border-radius: 16px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.15);
         }
 
         .config-message h2 {
-            color: #2196F3;
+            color: #667eea;
             margin-bottom: 1rem;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
+            font-weight: 700;
         }
 
         .config-message p {
-            color: #666;
-            font-size: 1rem;
-            line-height: 1.6;
+            color: #6c757d;
+            font-size: 1.1rem;
+            line-height: 1.8;
         }
 
         #results {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 1.5rem;
+            grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+            gap: 2rem;
         }
 
+        /* Carte produit moderne */
         .card {
             background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            border-radius: 20px;
+            box-shadow: 0 8px 30px rgba(0,0,0,0.12);
             overflow: hidden;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1);
+            position: relative;
         }
 
         .card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.25);
+        }
+
+        .card-image-container {
+            position: relative;
+            width: 100%;
+            height: 240px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            overflow: hidden;
         }
 
         .card-image {
             width: 100%;
-            height: 200px;
+            height: 100%;
             object-fit: cover;
-            background: #e0e0e0;
+            transition: transform 0.5s ease;
+        }
+
+        .card:hover .card-image {
+            transform: scale(1.1);
+        }
+
+        .card-no-image {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 4rem;
+            color: rgba(255,255,255,0.3);
         }
 
         .card-content {
-            padding: 1.5rem;
+            padding: 2rem;
+        }
+
+        .card-header {
+            margin-bottom: 1.5rem;
         }
 
         .card-title {
-            font-size: 1.25rem;
-            font-weight: 600;
-            color: #333;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: #2d3748;
             margin-bottom: 0.5rem;
+            line-height: 1.3;
         }
 
         .card-description {
-            color: #666;
-            line-height: 1.5;
-            margin-bottom: 1rem;
+            color: #718096;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
+            font-size: 0.95rem;
         }
 
-        .card-metadata {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-        }
-
-        .metadata-item {
+        /* Badge de statut avec couleurs */
+        .status-badge {
             display: inline-flex;
             align-items: center;
-            padding: 0.25rem 0.75rem;
-            background: #f0f0f0;
-            border-radius: 4px;
-            font-size: 0.875rem;
-            color: #555;
+            padding: 0.5rem 1rem;
+            border-radius: 50px;
+            font-size: 0.85rem;
+            font-weight: 600;
+            margin-bottom: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        /* Métadonnées modernisées */
+        .card-metadata {
+            display: flex;
+            flex-direction: column;
+            gap: 0.75rem;
+            padding-top: 1.5rem;
+            border-top: 2px solid #f0f0f0;
+        }
+
+        .metadata-row {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+        }
+
+        .metadata-icon {
+            width: 36px;
+            height: 36px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1rem;
+            flex-shrink: 0;
+        }
+
+        .metadata-content {
+            flex: 1;
         }
 
         .metadata-label {
+            font-size: 0.75rem;
+            color: #a0aec0;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
             font-weight: 600;
-            margin-right: 0.25rem;
+            margin-bottom: 0.2rem;
         }
 
+        .metadata-value {
+            font-size: 0.95rem;
+            color: #2d3748;
+            font-weight: 500;
+        }
+
+        /* Champs supplémentaires */
         .additional-fields {
-            margin-top: 1rem;
-            padding-top: 1rem;
-            border-top: 1px solid #e0e0e0;
+            margin-top: 1.5rem;
+            padding-top: 1.5rem;
+            border-top: 2px solid #f0f0f0;
+        }
+
+        .additional-fields-title {
+            font-size: 0.8rem;
+            color: #a0aec0;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-weight: 600;
+            margin-bottom: 0.75rem;
         }
 
         .field-item {
+            padding: 0.6rem 1rem;
+            background: #f8f9fa;
+            border-radius: 8px;
             margin-bottom: 0.5rem;
-            color: #555;
+            color: #4a5568;
             font-size: 0.9rem;
+            border-left: 3px solid #667eea;
         }
 
         .no-data {
             text-align: center;
-            padding: 3rem;
-            color: #999;
-            font-size: 1.1rem;
+            padding: 4rem;
+            color: white;
+            font-size: 1.3rem;
+            font-weight: 500;
         }
 
         .error-message {
-            background: #ffebee;
-            color: #c62828;
-            padding: 1rem;
-            border-radius: 4px;
-            margin-bottom: 1rem;
+            background: #fff5f5;
+            color: #c53030;
+            padding: 1.5rem;
+            border-radius: 12px;
+            margin-bottom: 1.5rem;
+            border-left: 4px solid #c53030;
         }
 
         .hidden {
             display: none;
+        }
+
+        /* Animation d'entrée */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .card {
+            animation: fadeInUp 0.5s ease-out backwards;
+        }
+
+        .card:nth-child(1) { animation-delay: 0.05s; }
+        .card:nth-child(2) { animation-delay: 0.1s; }
+        .card:nth-child(3) { animation-delay: 0.15s; }
+        .card:nth-child(4) { animation-delay: 0.2s; }
+        .card:nth-child(5) { animation-delay: 0.25s; }
+        .card:nth-child(6) { animation-delay: 0.3s; }
+
+        /* Message de recherche initial */
+        .search-prompt {
+            text-align: center;
+            padding: 4rem 2rem;
+            color: white;
+        }
+
+        .search-prompt-icon {
+            font-size: 5rem;
+            margin-bottom: 1.5rem;
+            opacity: 0.8;
+        }
+
+        .search-prompt h2 {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 1rem;
+        }
+
+        .search-prompt p {
+            font-size: 1.2rem;
+            opacity: 0.9;
         }
     </style>
 </head>
@@ -175,7 +312,7 @@
                 type="text" 
                 id="searchInput" 
                 class="search-input" 
-                placeholder="🔍 Rechercher..."
+                placeholder="🔍 Rechercher un produit, catégorie, auteur..."
                 autocomplete="off"
             >
             <div class="search-stats" id="searchStats"></div>
